FPLA-2504: extra OrdersSoughtChecker tests